# livebot

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Taskfile.yml  config_schema.json  cspell.config.yaml  index.html  install.sh  mkdocs.yml  project-words.txt  pylintrc  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
.cache/: cache.db
.github/workflows/: check.yml  documentation.yml  send_release_notification.yml
achievements/: index.html
changelog/: index.html
dev/config/: index.html
dev/install/: index.html
docs/: achievements.md  changelog.md  hooks.py  index.md  items.md
docs/dev/: config.md  install.md
faq/: index.html
guide/: index.html
items/: index.html
rules/: index.html
src/: cli.py  config.py  config_types.py  consts.py  datatypes.py  main.py
src/base/user_input/: add_new_market_item.py
src/core/: player_actions.py  weather.py
src/data/achievements/: achievements.py  utils.py
src/data/items/: items.py  utils.py
src/data/mobs/: mobs.py  utils.py
src/database/: base.py  models.py
src/handlers/: __init__.py  admin.py  callback.py  message.py
src/handlers/fsm/: __init__.py  market.py
src/handlers/scenes/: market.py
src/helpers/: cache.py  callback_factories.py  callback_factory.py  enums.py  exceptions.py  localization.py  markups.py  player_utils.py  stickers.py  utils.py
src/livebot/: cli.py  config.py  config_types.py  consts.py  datatypes.py  main.py
src/livebot/core/: player_actions.py  weather.py
src/livebot/data/achievements/: achievements.py  utils.py
src/livebot/data/items/: items.py  utils.py
src/livebot/data/mobs/: mobs.py  utils.py
src/livebot/database/: base.py  models.py
src/livebot/handlers/: __init__.py  admin.py  callback.py  message.py
src/livebot/handlers/scenes/: market.py
src/livebot/helpers/: cache.py  callback_factory.py  enums.py  exceptions.py  filters.py  localization.py  markups.py  player_utils.py  utils.py
src/livebot/locales/: ru.yml
src/livebot/middlewares/: __init__.py  actives.py  register.py  rule_check.py
src/livebot/tasks/: __init__.py  check.py  notification.py
src/locales/: ru.yml
src/middlewares/: __init__.py  actives.py  register.py  rule_check.py
src/tasks/: __init__.py  check.py  notification.py
tools/: bump_version.py  create_config.py  create_config_schema.py  release.py  send_release_notification.py  update_docs.py
