[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livebot"
description = "Игровой телеграм бот"
version = "13.3.3"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "aiogram>=3.20.0",
  "aiohttp>=3.11.6",
  "annotated-types>=0.7.0",
  "cachetools>=6.0.0",
  "dacite>=1.9.2",
  "i18n-lib>=0.2.0",
  "mashumaro[toml]>=3.16",
  "pymongo>=4.12.1",
  "redis>=6.1.0",
  "semver>=3.0.4",
  "tinylogging>=5.0.1",
  "tomlkit>=0.13.2",
  "transliterate>=1.10.2",
  "xdg-base-dirs>=6.0.2",
]

[[project.authors]]
name = "0xM4LL0C"
email = "0xm4ll0c@proton.me"

[project.urls]
Documentation = "https://0xm4ll0c.github.io/livebot/"
Issues = "https://github.com/0xM4LL0C/livebot/issues"
Source = "https://github.com/0xM4LL0C/livebot"

[project.scripts]
livebot = "livebot.main:cli_run"

[tool.hatch.build.targets.wheel]
packages = ["src/livebot"]

[tool.uv.sources.changelog-parser]
git = "https://github.com/0xM4LL0C/changelog-parser"
rev = "main"

[dependency-groups]
dev = [
  "changelog-parser",
  "httpx>=0.28.1",
  "pre-commit>=4.2.0",
  "pylint>=3.3.7",
  "pyright>=1.1.401",
  "ruff>=0.11.10",
  "watchfiles>=1.0.5",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-git-revision-date-localized-plugin>=1.4.6",
  "mkdocs-material>=9.6.14",
  "python-slugify>=8.0.4",
  "transliterate>=1.10.2",
]
